--- a/MyAdventure/Base.lproj/Main.storyboard
+++ b/MyAdventure/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                                 <rect key="frame" x="30" y="89" width="333" height="699"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qTO-6E-Kt5">
-                                        <rect key="frame" x="146" y="0.0" width="41.333333333333343" height="276"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="143" y="0.0" width="47" height="276"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -38,6 +38,8 @@
                                                     <backgroundConfiguration key="background" strokeWidth="3">
                                                         <color key="strokeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </backgroundConfiguration>
+                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
+                                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="choicePicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gmp-9c-N73"/>
@@ -50,6 +52,8 @@
                                                     <backgroundConfiguration key="background" strokeWidth="3">
                                                         <color key="strokeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </backgroundConfiguration>
+                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
+                                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="choicePicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RhC-Me-c0z"/>
